    lines. Closes: #953392
  * Fix bug in detection of secure versions of Vcs-* URLs. Closes:
    #954034
  * Fix a corner case removing items from --with arguments.
  * In verbose mode, report when the fixer script made changes but they
    were not high enough certainty.
  * debian/watch: Strip leading spaces in version > 3.
  * Add gitlab.labs.nic.cz to list of GitLab hosting sites.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 10 Mar 2020 11:47:17 +0000

lintian-brush (0.59) unstable; urgency=medium

  * unused-license-paragraph-in-dep5-copyright: downgrade certainty when
    license is mentioned elsewhere.
  * Look for custom patches directory in debian/rules.
  * Document the --dry-run option in lintian-brush(1). Closes: #953161
  * lintian-brush.conf.5: Clarify syntax of compat-release, location of
    file. Closes: #953164

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 07 Mar 2020 14:31:37 +0000

lintian-brush (0.58) unstable; urgency=medium

  * Add override for autotools-pkg-config-macro-not-cross-compilation-
    safe, which correctly (but intentionally) gets triggered for our
    test.
  * Improve handling of long lines in debian/changelog, especially when
    dealing with subitems.
  * Ignore rather than print tracebacks when mandatory fields in
    debian/control are missing.
  * When generating watch files for pypi, check package details against
    the API.
  * Strip related comments when removing options from
    debian/source/options.
  * Keep copies of the BSD license inlined, but rename BSD => BSD-3-
    clause (per the spec).
  * Don't remove patch files that are present but not mentioned in
    series unless --opinionated is specified.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 14 Feb 2020 02:35:54 +0000

lintian-brush (0.57) unstable; urgency=medium

  * Add fixer for debian-changelog-line-too-long.
  * Add fixer for misspelling-in-bug-closes.
  * Add some initial code for cleaning up unused lintian overrides.