@@ -1,0 +1,6 @@
+Source: blah
+Build-Depends: libc6-dev, debhelper-compat (= 11)
+
+Package: python3-blah
+Description: blah blah
+ blah
