@@ -1,0 +1,4 @@
+#!/usr/bin/make
+
+%:
+	dh $@ --with autoreconf
